syntax = "proto3";

import "proto/post/post.proto";
import "proto/image/image.proto";

option go_package = "testGrpcTestClient/grpc/protogen/timeline";

enum Event {
    INITIAL_ACCESS = 0;
    POST_CREATED = 1;
    POSTS_DELETED = 2;
}

service TimelineService {
    rpc GetPosts (TimelineRequest)  returns (stream TimelineResponse);
    rpc GetImages (ImageRequest) returns (stream ImageResponse);
}

message TimelineRequest {
    string id = 1;
}

message TimelineResponse {
    Event event_type = 1;
    repeated Post posts = 2;
    string image_path = 3;
}

message ImageRequest {
    repeated string file_names = 1;
}

message ImageResponse {
    string file_name = 1;
    Chunk chunk = 2;
}

